--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular": "~1.4.0",
     "angular-route": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
-    "angular-mocks": "^1.5.0"
+    "angular-mocks": "^1.5.0",
+    "jasmine-core": "jasmine#^2.4.1"
   }
 }
