--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "devDependencies": {
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
-    "karma-jasmine": "^0.3.7"
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.5"
   },
   "scripts": {
     "postinstall": "bower install",
